--- a/src/index.njk
+++ b/src/index.njk
@@ -20,26 +20,8 @@
 					<div id="main">
 						<div class="inner">
 
-							<!-- Header -->
-								<header id="header">
-									<img src="/assets/images/Logo.png" alt="logo heart with rays"><a href="index.html" class="logo"><strong></strong></a>
-									<ul class="icons">
-										<!-- Twitter -->
-										<li><a href="#" class="icon brands fab fa-twitter" aria-label="Twitter"><span class="label">Twitter</span></a></li>
-										<!-- Facebook -->
-										<li><a href="#" class="icon brands fab fa-facebook-f" aria-label="Facebook"><span class="label">Facebook</span></a></li>
+							{% include "./_components/header.njk" %}
 
-										<!-- Snapchat -->
-										<li><a href="#" class="icon brands fab fa-snapchat-ghost" aria-label="Snapchat"><span class="label">Snapchat</span></a></li>
-
-										<!-- Instagram -->
-										<li><a href="#" class="icon brands fab fa-instagram" aria-label="Instagram"><span class="label">Instagram</span></a></li>
-
-										<!-- Medium -->
-										<li><a href="#" class="icon brands fab fa-medium-m" aria-label="Medium"><span class="label">Medium</span></a></li>
-
-									</ul>
-								</header>
 
 							<!-- Banner -->
 								<section id="banner">
@@ -50,7 +32,7 @@
 											<p>200+ placements, 20 years of experiences</p>
 										</header>
 										<p>Brighter Adoptions has served hundreds of clients. We feel a great sense of responsibility to help the women who come to us have the best experience possible and find the perfect family for their unborn child.
-										<br> <br> We understand how stressful life can be. <br> Click below to schedule a call with us.<br><BR> We are ready to help. </p>
+										<br> <br> We are ready to help. </p>
 										<ul class="actions">
 											<li><a href="#" class="button big">Schedule a call</a></li>
 										</ul>
