expectant mothers init

--- a/src/_layouts/blog.njk
+++ b/src/_layouts/blog.njk
@@ -21,10 +21,11 @@
 
 							<!-- Content -->
 								<article>
-<!-- 
-    <span class="image main">
-        <img src="{{ page.image }}" alt="" />
-    </span> -->
+
+									<span class="image main">
+										<img src="{{ image }}" alt="" style="max-height: 20rem; margin-top: 4rem;"/>
+									</span>
+
 									<header class="main">
 										<h1>{{ post.data.title }}</h1>
 									</header>
