--- a/src/assets/sass/base/_typography.scss
+++ b/src/assets/sass/base/_typography.scss
@@ -9,7 +9,7 @@
 	body, input, select, textarea {
 		color: _palette(fg);
 		font-family: _font(family);
-		font-size: 13pt;
+		font-size: 16pt;
 		font-weight: _font(weight);
 		line-height: 1.65;
 
@@ -22,7 +22,7 @@
 		}
 
 		@include breakpoint('<=xxsmall') {
-			font-size: 9pt;
+			font-size: 12pt;
 		}
 	}
 
@@ -111,6 +111,11 @@
 	}
 
 	@include breakpoint('<=small') {
+
+		p{
+			font-size: 1.3em;
+
+		}
 		h1 {
 			font-size: 2em;
 			line-height: 1.4;
