expectant mothers demo

--- a/src/expectantmothers.njk
+++ b/src/expectantmothers.njk
@@ -83,11 +83,9 @@
 
 			</div>
 		<!-- Scripts -->
-		<script src= "{{ breakpoints }}"></script>
-		<script src= "{{ browsermin }}"></script>
-		<script src= "{{ jquery }}"></script>
-		<script src= "{{ main }}"></script>
-		<script src= "{{ util }}"></script>
+		{% include "./javascript.njk" %}
+
+
 
 
 	</body>
