--- a/src/index.njk
+++ b/src/index.njk
@@ -106,13 +106,12 @@
 
 			</div>
 
-		<!-- Scripts -->					
-		
-			<script src= "{{ breakpoints }}"></script>
-			<script src= "{{ browsermin }}"></script>
-			<script src= "{{ jquery }}"></script>
-			<script src= "{{ main }}"></script>
-			<script src= "{{ util }}"></script>
+		{% include "./javascript.njk" %}
+		{# <script src= "/assets/js/jquery.min.js"></script>
+		<script src= "/assets/js/breakpoints.min.js"></script>
+		<script src= "/assets/js/browser.min.js"></script>
+		<script src= "/assets/js/main.js"></script>
+		<script src= "/assets/js/util.js"></script> #}
 
 	</body>
 </html>
