--- a/src/_includes/blog.njk
+++ b/src/_includes/blog.njk
@@ -6,7 +6,7 @@
 		<title> Brighter Adoptions</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="/main.css" />
+		<link rel="stylesheet" href="src/assets/css/" />
 	</head>
 	<body class="is-preload">
 
@@ -40,11 +40,11 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="src/assets/js/jquery.min.js"></script>
+			<script src="src/assets/js/browser.min.js"></script>
+			<script src="src/assets/js/breakpoints.min.js"></script>
+			<script src="src/assets/js/util.js"></script>
+			<script src="src/assets/js/main.js"></script>
 
 	</body>
 </html>
