media query fix expectant mothers testimonial

--- a/src/expectantmothers.njk
+++ b/src/expectantmothers.njk
@@ -8,7 +8,7 @@
 	<head>
 		<img href=""> <title>Brighter Adoptions</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
 		<link rel="stylesheet" href="assets/css/fontawesome-all.min.css">
 	<link rel="stylesheet" href="/assets/css/main.css">	</head>
 	<body class="is-preload">
@@ -25,7 +25,7 @@
 								<section>
 									<h2 id="content">Sample Content</h2>
 									<p>Praesent ac adipiscing ullamcorper semper ut amet ac risus. Lorem sapien ut odio odio nunc. Ac adipiscing nibh porttitor erat risus justo adipiscing adipiscing amet placerat accumsan. Vis. Faucibus odio magna tempus adipiscing a non. In mi primis arcu ut non accumsan vivamus ac blandit adipiscing adipiscing arcu metus praesent turpis eu ac lacinia nunc ac commodo gravida adipiscing eget accumsan ac nunc adipiscing adipiscing lorem ipsum dolor sit amet nullam veroeros adipiscing.</p>
-									<h3>Our clients</h3>
+
 									{% include "./_components/testimonial.html" %}
 
 									<!-- Content -->
@@ -76,6 +76,7 @@
 										{% endfor %}
 									</div>
 								</section>
+
 						</div>
 					</div>
 
