--- a/src/index.njk
+++ b/src/index.njk
@@ -8,7 +8,7 @@
 	<head>
 		<img href=""> <title>Brighter Adoptions</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.3, user-scalable=yes" />
 		<link rel="stylesheet" href="assets/css/fontawesome-all.min.css">
 		<link rel="stylesheet" href="/assets/css/main.css">	</head>
 	<body class="is-preload">
@@ -107,11 +107,11 @@
 			</div>
 
 		{% include "./javascript.njk" %}
-		{# <script src= "/assets/js/jquery.min.js"></script>
-		<script src= "/assets/js/breakpoints.min.js"></script>
-		<script src= "/assets/js/browser.min.js"></script>
-		<script src= "/assets/js/main.js"></script>
-		<script src= "/assets/js/util.js"></script> #}
+		{# <script src= "/jquery.min.js"></script>
+		<script src= "/breakpoints.min.js"></script>
+		<script src= "/browser.min.js"></script>
+		<script src= "/main.js"></script>
+		<script src= "/util.js"></script> #}
 
 	</body>
 </html>
