fix blog layout

--- a/src/_components/ourteam.njk
+++ b/src/_components/ourteam.njk
@@ -1,4 +1,4 @@
-<style>
+{# <style>
 
     /* basic styling */
 .container {
@@ -134,4 +134,4 @@
 			<strong>Editorial, Wallpapers, Architecture &amp; Interior</strong>
 		</p>
 	</div>
-</div>
+</div> #}
