--- a/src/index.njk
+++ b/src/index.njk
@@ -34,7 +34,7 @@
 										<p>Brighter Adoptions has served hundreds of clients. We feel a great sense of responsibility to help the women who come to us have the best experience possible and find the perfect family for their unborn child.
 										<br> <br> We are ready to help. </p>
 										<ul class="actions">
-											<li><a href="#" class="button big">Schedule a call</a></li>
+											<li><a href="tel:%E2%80%8B%E2%80%8B8019896386" class="button big">Call Us</a></li>
 										</ul>
 									</div>
 									<span class="image object">
