--- a/src/_components/sidebar.njk
+++ b/src/_components/sidebar.njk
@@ -1,5 +1,12 @@
 
 				<!-- Sidebar -->
+
+				<style>
+					#sidebar .image {
+						max-width: 50%;						
+					}
+				</style>
+
 					<div id="sidebar">
 						<div class="inner">
 
@@ -42,7 +49,7 @@
 								<div class="mini-posts">
 									{% for post in collections.staffProfiles %}
 										<article>
-										  <a href="#" class="image"><img src="{{ post.data.image }}" alt="" /></a>
+										  <a href="/about" class="image"><img src="{{ post.data.image }}" alt="photo of{{post.data.name}} - {{ post.data.title }}"/></a>
 										  <p>{{post.data.name}} - {{ post.data.title }} </p>
 										</article>
 										{% set count = count + 1 %}
