--- a/src/expectantmothers.njk
+++ b/src/expectantmothers.njk
@@ -63,7 +63,7 @@
 											{% if post.data.tags and "birth-mother" in post.data.tags %}
 												{% if count < 2 %}
 													<article>
-														<a href="{{ post.url }}" class="image"><img src="{{ post.data.image }}" alt="" /></a>
+														<img src="{{ post.data.image }}" alt="image of {{post.data.title}}" />
 														<h3>{{ post.data.title }}</h3>
 														<p>{{ post.data.excerpt }}</p>
 														<ul class="actions">
