--- a/src/_layouts/blog.njk
+++ b/src/_layouts/blog.njk
@@ -89,7 +89,7 @@
 										</header>
 									</div>
 									<span class="image main">
-										<img src="{{ image }}" alt=""/>
+										<img src="{{ image }}" alt="{{title}}"/>
 									</span>
 								</div>
 								
