--- a/src/about.njk
+++ b/src/about.njk
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<img href=""> <title>Brighter Adoptions</title>
+		<title>About</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="/assets/css/fontawesome-all.min.css">
