--- a/src/index.njk
+++ b/src/index.njk
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<img href=""> <title>Brighter Adoptions</title>
+		<title>Brighter Home</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
 		<link rel="stylesheet" href="assets/css/fontawesome-all.min.css">
