--- a/src/_layouts/blog.njk
+++ b/src/_layouts/blog.njk
@@ -5,6 +5,7 @@
 	<head>
 		<title> Brighter Adoptions</title>
 		<meta charset="utf-8" />
+		<meta name="description" content="{{excerpt}}">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="..." crossorigin="anonymous" />
 		<link rel="stylesheet" href="/main.css" />
@@ -112,7 +113,7 @@
 												<h3>{{ post.data.title }}</h3>
 												<p>{{ post.data.excerpt }}</p>
 												<ul class="actions">
-													<li><a href="{{ post.url }}" class="button">More</a></li>
+													<li><a href="{{ post.url }}" class="button">Read Article</a></li>
 												</ul>
 											</article>
 											{% set count = count + 1 %}
