--- a/src/index.njk
+++ b/src/index.njk
@@ -8,6 +8,8 @@
 	<head>
 		<title>Brighter Home</title>
 		<meta charset="utf-8" />
+		<meta name="robots" content="all">
+
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
 		<link rel="stylesheet" href="assets/css/fontawesome-all.min.css">
 		<link rel="stylesheet" href="/assets/css/main.css">	</head>
