--- a/src/index.njk
+++ b/src/index.njk
@@ -9,7 +9,6 @@
 		<title>Brighter Home</title>
 		<meta charset="utf-8" />
 		<meta name="robots" content="all">
-
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
 		<link rel="stylesheet" href="assets/css/fontawesome-all.min.css">
 		<link rel="stylesheet" href="/assets/css/main.css">	</head>
@@ -93,7 +92,7 @@
         <h3>{{ post.data.title }}</h3>
         <p>{{ post.data.excerpt }}</p>
         <ul class="actions">
-          <li><a href="{{ post.url }}" class="button">More</a></li>
+          <li><a href="{{ post.url }}" class="button">Read</a></li>
         </ul>
       </article>
     {% endfor %}
