--- a/src/index.njk
+++ b/src/index.njk
@@ -88,11 +88,11 @@
   <div class="posts">
 {% for post in collections.blogPosts | reverse %}
       <article>
-        <a href="{{ post.url }}" class="image"><img src="{{ post.data.image }}" alt="" /></a>
+        <a href="{{ post.url }}" class="image"><img src="{{ post.data.image }}" aria-label="read article titled {{post.data.title}}">/></a>
         <h3>{{ post.data.title }}</h3>
         <p>{{ post.data.excerpt }}</p>
         <ul class="actions">
-          <li><a href="{{ post.url }}" class="button">Read</a></li>
+          <li><a href="{{ post.url }}" aria-label="Read More" class="button">Read</a></li>
         </ul>
       </article>
     {% endfor %}
