--- a/src/_components/sidebar.njk
+++ b/src/_components/sidebar.njk
@@ -21,7 +21,7 @@
 							<!-- Menu -->
 							<nav id="menu">
 								<header class="major">
-									<img src="/assets/images/LogoHeart.jpg" alt="logo depicted as a heart with rays" style="padding: 0; margin-left: 30%; margin-top: 0%; margin-bottom: 10%;">
+									<img src="/assets/images/LogoHeart.png" alt="logo depicted as a heart with rays" style="padding: 0; margin-left: 30%; margin-top: 0%; margin-bottom: 10%;">
 <br>
 									<h2>Menu</h2>
 								</header>
