--- a/src/_layouts/blog.njk
+++ b/src/_layouts/blog.njk
@@ -109,7 +109,7 @@
 											{% if post.data.tags and "birth-mother" in post.data.tags %}
 											{% if count < 2 %}
 											<article>
-												<a href="{{ post.url }}" class="image"><img src="{{ post.data.image }}" alt="" /></a>
+												<a href="{{ post.url }}" class="image"><img src="{{ post.data.thumbnail }}" alt="" /></a>
 												<h3>{{ post.data.title }}</h3>
 												<p>{{ post.data.excerpt }}</p>
 												<ul class="actions">
