--- a/src/_components/ourteam.njk
+++ b/src/_components/ourteam.njk
@@ -443,7 +443,7 @@ a:hover {
 	  <div class="columns is-multiline">
 		<div class="column is-4">
 		  <div class="box p-6 pb-12 has-text-centered">
-			<img class="image is-fullwidth is-cover is-rounded mx-auto mb-6" style=" height: 320px; border-radius: 50%;" src="/assets/images/Sandi.jpg" alt="" data-config-id="image1">
+			<img class="image is-fullwidth is-cover is-rounded mx-auto mb-6" style=" height: 320px; border-radius: 50%;" src="/assets/images/sandiProf.jpg" alt="" data-config-id="image1">
 			<h3 class="is-size-4 has-text-weight-semibold" data-config-id="name1">Cameron Williams</h3>
 			<p class="mb-8 has-text-grey-dark" data-config-id="title1">CEO &amp; Founder</p>
 			<div>
@@ -454,7 +454,7 @@ a:hover {
 		</div>
 		<div class="column is-4">
 		  <div class="box p-6 pb-12 has-text-centered">
-			<img class="image is-fullwidth is-cover is-rounded mx-auto mb-6" style="height: 320px; border-radius: 50%;" src="/assets/images/Shaylee.jpg" alt="" data-config-id="image2">
+			<img class="image is-fullwidth is-cover is-rounded mx-auto mb-6" style="height: 320px; border-radius: 50%;" src="/assets/images/shayleeprof.jpg" alt="" data-config-id="image2">
 			<h3 class="is-size-4 has-text-weight-semibold" data-config-id="name2">Robert Fox</h3>
 			<p class="mb-8 has-text-grey-dark" data-config-id="title2">CEO &amp; Founder</p>
 			<div>
@@ -483,7 +483,7 @@ a:hover {
 		</div>
 		<div class="column is-4">
 		  <div class="box p-6 pb-12 has-text-centered">
-			<img class="image is-fullwidth is-cover is-rounded mx-auto mb-6" style="height: 320px; border-radius: 50%;" src="/assets/images/Taylor.jpg" alt="" data-config-id="image3">
+			<img class="image is-fullwidth is-cover is-rounded mx-auto mb-6" style="height: 320px; border-radius: 50%;" src="/assets/images/taylorProf.jpg" alt="" data-config-id="image3">
 			<h3 class="is-size-4 has-text-weight-semibold" data-config-id="name3">Esther Howards</h3>
 			<p class="mb-8 has-text-grey-dark" data-config-id="title3">CEO &amp; Founder</p>
 			<div>
@@ -541,7 +541,7 @@ a:hover {
 		</div>
 		<div class="column is-4">
 		  <div class="box p-6 pb-12 has-text-centered">
-			<img class="image is-fullwidth is-cover is-rounded mx-auto mb-6" style="height: 320px; border-radius: 50%;" src="/assets/images/maryJane.jpg" alt="" data-config-id="image5">
+			<img class="image is-fullwidth is-cover is-rounded mx-auto mb-6" style="height: 320px; border-radius: 50%;" src="/assets/images/maryjaneprof.jpg" alt="" data-config-id="image5">
 			<h3 class="is-size-4 has-text-weight-semibold" data-config-id="name5">Danny Bailey</h3>
 			<p class="mb-8 has-text-grey-dark" data-config-id="title5">CEO &amp; Founder</p>
 			<div>
@@ -570,7 +570,7 @@ a:hover {
 		</div>
 		<div class="column is-4">
 		  <div class="box p-6 pb-12 has-text-centered">
-			<img class="image is-fullwidth is-cover is-rounded mx-auto mb-6" style="height: 320px; border-radius: 50%;" src="/assets/images/whitney.jpg" alt="" data-config-id="image6">
+			<img class="image is-fullwidth is-cover is-rounded mx-auto mb-6" style="height: 320px; border-radius: 50%;" src="/assets/images/whitneyprof.jpg" alt="" data-config-id="image6">
 			<h3 class="is-size-4 has-text-weight-semibold" data-config-id="name6">Jane Cooper</h3>
 			<p class="mb-8 has-text-grey-dark" data-config-id="title6">CEO &amp; Founder</p>
 			<div>
