--- a/src/_layouts/blog.njk
+++ b/src/_layouts/blog.njk
@@ -90,7 +90,7 @@
 										</header>
 									</div>
 									<span class="image main">
-										<img src="{{ image }}" alt="{{title}}"/>
+										<img src="{{ thumbnail }}" alt="{{title}}"/>
 									</span>
 								</div>
 								
