--- a/src/index.njk
+++ b/src/index.njk
@@ -12,7 +12,43 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
 		<link rel="stylesheet" href="assets/css/fontawesome-all.min.css">
 		<link rel="stylesheet" href="/assets/css/main.css">	</head>
-	<body class="is-preload">
+<style>
+
+.image-container {
+		display: flex;
+		justify-content: space-around;
+	}
+
+.image-container img {
+	width: 70%;
+	height: auto;
+}
+
+.spin-image {
+  width: 100px; /* Adjust image size as needed */
+  height: auto;
+  transition: transform 0.5s ease; /* Smooth transition for the rotation */
+}
+
+.spin-on-scroll {
+  outline: none; /* Remove default focus outline */
+  animation: spinAnimation 2s infinite linear; /* Define the spinning animation */
+}
+
+
+
+/* Keyframes for the spinning animation */
+@keyframes spinAnimation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+</style>
+<body class="is-preload">
 
 		<!-- Wrapper -->
 			<div id="wrapper">
@@ -42,7 +78,10 @@
 										<img src="/assets/images/pic300.jpg" alt="two women holding a child" />
 									</span>
 								</section>
-
+								<section>
+									{% include "./_components/spinninglogos.njk" %}
+									  
+								</section>
 							<!-- Section -->
 								<section>
 									<header class="major">
@@ -108,6 +147,38 @@
 			</div>
 
 		{% include "./javascript.njk" %}
+		<script>
+			$(document).ready(function() {
+			  var slideIndex = 0;
+			  var slides = $('.carousel-inner .profile-article');
+			  var dotCount = slides.length;
+		  
+			  function showSlide(index) {
+				$('.carousel-inner').slick('slickGoTo', index);
+				$('.pagination-dot').removeClass('active');
+				$('.pagination-dot').eq(index).addClass('active');
+			  }
+		  
+			  function nextSlide() {
+				slideIndex = (slideIndex + 1) % dotCount;
+				showSlide(slideIndex);
+			  }
+		  
+			  var interval = setInterval(nextSlide, 2000);
+		  
+			  $('.pagination-dot').click(function() {
+				var index = $(this).index();
+				showSlide(index);
+				clearInterval(interval);
+				interval = setInterval(nextSlide, 2000);
+			  });
+		  
+			  $('.carousel-inner').on('swipe', function() {
+				clearInterval(interval);
+				interval = setInterval(nextSlide, 2000);
+			  });
+			});
+		  </script>
 		{# <script src= "/jquery.min.js"></script>
 		<script src= "/breakpoints.min.js"></script>
 		<script src= "/browser.min.js"></script>
