--- a/src/index.njk
+++ b/src/index.njk
@@ -79,7 +79,7 @@
 									</span>
 								</section>
 								<section>
-									{% include "./_components/spinninglogos.njk" %}
+									{# {% include "./_components/spinninglogos.njk" %} #}
 									  
 								</section>
 							<!-- Section -->
