--- a/src/index.njk
+++ b/src/index.njk
@@ -71,7 +71,7 @@
 										<p>Brighter Adoptions has served hundreds of clients. We feel a great sense of responsibility to help the women who come to us have the best experience possible and find the perfect family for their unborn child.
 										<br> <br> We are ready to help. </p>
 										<ul class="actions">
-											<li><a href="tel:%E2%80%8B%E2%80%8B8019896386" class="button big">Call Us</a></li>
+											<li><a href="tel:%E2%80%8B%E2%80%8B8019896386" class="button  large">Call Us</a></li>
 										</ul>
 									</div>
 									<span class="image object">
@@ -79,7 +79,7 @@
 									</span>
 								</section>
 								<section>
-									{# {% include "./_components/spinninglogos.njk" %} #}
+									{% include "./_components/spinninglogos.njk" %}
 									  
 								</section>
 							<!-- Section -->
