--- a/src/_components/sidebar.njk
+++ b/src/_components/sidebar.njk
@@ -190,7 +190,7 @@
 								</header>
 								<p>if you have any questions, please don't hesitate to call us. with over 20 years of experience in the adoption business, we are committed to providing dedicated support. based in utah, we are here to help families grow with compassion. thank you!</p>
 								<ul class="contact">
-									<li class="icon solid fa-envelope"><a href="#">sandiProf@brighteradoption.com</a></li>
+									<li class="icon solid fa-envelope"><a href="#">sandi@brighteradoption.com</a></li>
 									<li class="icon solid fa-phone">(801) 989-6386</li>
 									<li class="icon solid fa-home">952 S Main St #B-2<br />
 									Layton, UT 84403</li>
