--- a/src/index.njk
+++ b/src/index.njk
@@ -35,8 +35,6 @@
   animation: spinAnimation 2s infinite linear; /* Define the spinning animation */
 }
 
-
-
 /* Keyframes for the spinning animation */
 @keyframes spinAnimation {
   from {
@@ -46,6 +44,91 @@
     transform: rotate(360deg);
   }
 }
+
+/* CSS */
+.button-85 {
+  padding: 0.6em 2em;
+  border: none;
+  outline: none;
+  color: rgb(255, 255, 255);
+  background: #111;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  border-radius: 10px;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-85:before {
+  content: "";
+  background: linear-gradient(
+    45deg,
+    #ff0000,
+    #ff7300,
+    #fffb00,
+    #48ff00,
+    #00ffd5,
+    #002bff,
+    #7a00ff,
+    #ff00c8,
+    #ff0000
+  );
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  background-size: 400%;
+  z-index: -1;
+  filter: blur(5px);
+  -webkit-filter: blur(5px);
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  animation: glowing-button-85 20s linear infinite;
+  transition: opacity 0.3s ease-in-out;
+  border-radius: 10px;
+}
+
+@keyframes glowing-button-85 {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 400% 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
+
+.button-85:after {
+  z-index: -1;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #222;
+  left: 0;
+  top: 0;
+  border-radius: 10px;
+}
+
+.blackbutton {
+	min-width: 100%;
+	margin-top:12rem;
+    padding: 0.9em 2em;
+    border: none;
+    outline: none;
+    color: white; /* Changing text color to white */
+    background: #111;
+    cursor: pointer;
+    position: relative;
+    z-index: 0;
+    border-radius: 10px;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+  }
 
 </style>
 <body class="is-preload">
@@ -71,7 +154,9 @@
 										<p>Brighter Adoptions has served hundreds of clients. We feel a great sense of responsibility to help the women who come to us have the best experience possible and find the perfect family for their unborn child.
 										<br> <br> We are ready to help. </p>
 										<ul class="actions">
-											<li><a href="tel:%E2%80%8B%E2%80%8B8019896386" class="button  large">Call Us</a></li>
+											<li><a href="tel:%E2%80%8B%E2%80%8B8019896386" class="button-85">Call Us</a></li>
+											{# <button class="button-85" role="button">Button 85</button> #}
+
 										</ul>
 									</div>
 									<span class="image object">
@@ -131,7 +216,7 @@
         <h3>{{ post.data.title }}</h3>
         <p>{{ post.data.excerpt }}</p>
         <ul class="actions">
-          <li><a href="{{ post.url }}" aria-label="Read More" class="button">Read</a></li>
+          <li><a href="{{ post.url }}" aria-label="Read More" class="blackbutton">Read</a></li>
         </ul>
       </article>
     {% endfor %}
