--- a/src/_components/spinninglogos.njk
+++ b/src/_components/spinninglogos.njk
@@ -10,10 +10,10 @@
   
     .box {
       width: calc(33.33% - 20px); /* 33.33% width for each box with spacing */
-      background-color: #86dc9c12;
-      padding: 20px;
+      background-color: #ffffff12;
+      padding: 3rem;
       border-radius: 20px;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.386);
+      box-shadow: 0 3px 4px rgba(0, 170, 232, 0.568);
       text-align: center;
       display: flex;
       flex-direction: column;
@@ -81,7 +81,7 @@
   <div class="container specific-container">
     <!-- Box 1 -->
     <div class="box">
-      <img src="https://brighteradoption.com/wp-content/uploads/Expectant-340.png" alt="Expectant Mothers" width="340" class="spinonscroll">
+      <img src="/assets/images/expectantmothers.png" alt="Expectant Mothers" width="340" class="spinonscroll">
       <div class="content-div">
         <h2>Expectant Mothers</h2>
         <p>We strive to cater to our expectant mothers and to make this extremely difficult experience as bright as possible.</p>
@@ -92,7 +92,7 @@
   
     <!-- Box 2 -->
     <div class="box">
-      <img src="https://brighteradoption.com/wp-content/uploads/Housing-340.png" alt="Housing Program" width="340">
+      <img src="/assets/images/housingprogram.png" alt="Housing Program" width="340">
       <div class="content-div">
         <h2>Housing Program</h2>
         <p>We have multiple one-bedroom and two-bedroom apartment units available for our expectant mothers to stay in.</p>
@@ -104,7 +104,7 @@
   
     <!-- Box 3 -->
     <div class="box">
-      <img src="https://brighteradoption.com/wp-content/uploads/Adopting-340.png" alt="Adopting Families" width="340">
+      <img src="/assets/images/adoptingfamilies.png" alt="Adopting Families" width="340">
       <div class="content-div">
         <h2>Adopting Families</h2>
         <p>While we don’t work directly with families wanting to adopt, we can help point you in the right direction.</p>
