--- a/src/index.njk
+++ b/src/index.njk
@@ -47,7 +47,7 @@
 
 /* CSS */
 .button-85 {
-  padding: 0.6em 2em;
+  padding: 1rem 4rem;
   border: none;
   outline: none;
   color: rgb(255, 255, 255);
@@ -80,13 +80,13 @@
   left: -2px;
   background-size: 400%;
   z-index: -1;
-  filter: blur(5px);
+  filter: blur(2px);
   -webkit-filter: blur(5px);
   width: calc(100% + 4px);
   height: calc(100% + 4px);
   animation: glowing-button-85 20s linear infinite;
   transition: opacity 0.3s ease-in-out;
-  border-radius: 10px;
+  border-radius: 8px;
 }
 
 @keyframes glowing-button-85 {
@@ -154,7 +154,7 @@
 										<p>Brighter Adoptions has served hundreds of clients. We feel a great sense of responsibility to help the women who come to us have the best experience possible and find the perfect family for their unborn child.
 										<br> <br> We are ready to help. </p>
 										<ul class="actions">
-											<li><a href="tel:%E2%80%8B%E2%80%8B8019896386" class="button-85">Call Us</a></li>
+											<li><a href="tel:%E2%80%8B%E2%80%8B8019896386" class="button-85">CALL US</a></li>
 											{# <button class="button-85" role="button">Button 85</button> #}
 
 										</ul>
@@ -165,6 +165,7 @@
 								</section>
 								<section>
 									{% include "./_components/spinninglogos.njk" %}
+
 									  
 								</section>
 							<!-- Section -->
