--- a/src/_components/faq.njk
+++ b/src/_components/faq.njk
@@ -1,25 +1,67 @@
+<style>
 
-<div class="slider">
-    <input type="radio" name="slider" title="slide1" checked="checked" class="slider__nav"/>
-    <input type="radio" name="slider" title="slide2" class="slider__nav"/>
-    <input type="radio" name="slider" title="slide3" class="slider__nav"/>
-    <input type="radio" name="slider" title="slide4" class="slider__nav"/>
-    <div class="slider__inner">
-      <div class="slider__contents"><i class="slider__image fa fa-codepen"></i>
-        <h2 class="slider__caption">codepen</h2>
-        <p class="slider__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At cupiditate omnis possimus illo quos, corporis minima!</p>
-      </div>
-      <div class="slider__contents"><i class="slider__image fa fa-newspaper-o"></i>
-        <h2 class="slider__caption">newspaper-o</h2>
-        <p class="slider__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At cupiditate omnis possimus illo quos, corporis minima!</p>
-      </div>
-      <div class="slider__contents"><i class="slider__image fa fa-television"></i>
-        <h2 class="slider__caption">television</h2>
-        <p class="slider__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At cupiditate omnis possimus illo quos, corporis minima!</p>
-      </div>
-      <div class="slider__contents"><i class="slider__image fa fa-diamond"></i>
-        <h2 class="slider__caption">diamond</h2>
-        <p class="slider__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At cupiditate omnis possimus illo quos, corporis minima!</p>
-      </div>
-    </div>
-  </div>
+
+.faq-container{
+  padding: 2rem;
+  border: rgb(255, 219, 127) 2px solid;
+}
+
+.faq-container h1{
+  color: #fff;
+  text-align: center;
+}
+
+.faq-container p{
+font-size: 1.4rem;
+}
+details{
+  background-color: #00000000;
+  color: #000000;
+  font-size: 1.5rem;
+}
+
+summary {
+  padding: .5em 1.3rem;
+  list-style: none;
+  display: flex;
+  justify-content: space-between;  
+  transition: height 1s ease;
+}
+
+summary::-webkit-details-marker {
+  display: none;
+}
+
+summary:after{
+  content: "\002B";
+}
+
+details[open] summary {
+    border-bottom: 1px solid #aaa;
+    margin-bottom: .5em;
+}
+
+details[open] summary:after{
+  content: "\00D7";
+}
+
+details[open] div{
+  padding: .5em 1em;
+}
+
+
+</style>
+
+<header class="major">
+  <h2> FAQ</h2>
+</header>
+<div class="faq-container">
+	{% for post in collections.faq %}
+      <details>
+      <summary>{{post.data.title}}</summary>
+      <div>
+        {{post.content | safe}}
+            </div>
+    </details>
+    {% endfor %}
+</div>
