--- a/src/expectantmothers.njk
+++ b/src/expectantmothers.njk
@@ -19,21 +19,37 @@
 				<!-- Main -->
 					<div id="main">
 						 <!--inner-->
-						<div class="inner">
+						<div class="inner" style="padding: 2rem;">
 
 							{% include "./_components/header.njk" %}
 		
 
 
-								<section>
-									<h2 id="content">Sample Content</h2>
-									<p>Praesent ac adipiscing ullamcorper semper ut amet ac risus. Lorem sapien ut odio odio nunc. Ac adipiscing nibh porttitor erat risus justo adipiscing adipiscing amet placerat accumsan. Vis. Faucibus odio magna tempus adipiscing a non. In mi primis arcu ut non accumsan vivamus ac blandit adipiscing adipiscing arcu metus praesent turpis eu ac lacinia nunc ac commodo gravida adipiscing eget accumsan ac nunc adipiscing adipiscing lorem ipsum dolor sit amet nullam veroeros adipiscing.</p>
+								<section style="margin-top: 3rem; padding: 2rem;">
+									<header class="minor">
+										<h2 id="">Placing a Child for Adoption?</h2>
+									</header>										
+										<div>
+											<p>Let me introduce myself, my name is Sandi Quick. I am the director of Brighter Adoptions, Inc., a licensed child-placing agency in the State of Utah. I have been involved in adoptions for twenty-two years and have loved every minute of it. It is my passion to build families through adoptions and to provide loving service to expectant mothers desiring an adoption plan.</p>
+											<p>I can’t imagine being in the situation that you are. It must be terrifying to feel like the decision you are about to make involves complete and total strangers. Besides not knowing me personally, you haven’t yet met the family you will choose to adopt your child. All of these are huge things to be dealing with on top of an unplanned pregnancy and whatever else may be going on in your personal life. You may be wondering…</p>
+											<b>• How do I know who to trust?</b>
+											<br>
+											<b>• How will I know which family to choose?</b>
+											<br>
+											<b>• How will I know which agency to work with?</b>
+										</div>
+									</section>
 
-									{% include "./_components/testimonial.html" %}
+									<section>
+										<header class="Major">
+											<h2>Birth Mother Experiences</h2>
+										</header>	
+										{% include "./_components/testimonial.html" %}
+									</section>
 
-									<!-- Content -->
-										<h3>heading</h3>
-										<div class="row">
+									<header class="Major">
+										<h2>Birth Mother Experiences</h2>
+									</header>											<div class="row">
 											<div class="col-6 col-12-small">
 												<h3>Sem turpis amet semper</h3>
 												<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat commodo eu sed ante lacinia. Sapien a lorem in integer ornare praesent commodo adipiscing arcu in massa commodo lorem accumsan at odio massa ac ac. Semper adipiscing varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
@@ -58,6 +74,9 @@
 										</div>
 								</section>
 
+								{% include "./_components/faq.njk" %}
+
+
 								<section>
 									<h2>Birth Mother Experiences</h2>
 									<div class="posts">
@@ -66,7 +85,7 @@
 											{% if post.data.tags and "birth-mother" in post.data.tags %}
 												{% if count < 2 %}
 													<article>
-														<a href="{{ post.url }}" class="image"><img src="{{ post.data.image }}" alt="image of {{post.data.title}}" /></a>
+														<a href="{{ post.url }}" class="image"><img src="{{ post.data.thumbnail }}" alt="image of {{post.data.title}}" /></a>
 														<h3>{{ post.data.title }}</h3>
 														<p>{{ post.data.excerpt }}</p>
 														<ul class="actions">
